fix: fix some layout issues

--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -61,6 +61,7 @@
 
 			&_mobile {
 				display: revert;
+				max-height: rem(50);
 			}
 		}
 	}
